added body to html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
   </head>
-  <body></body>
+
+  <body>
+    <h1>Croissant</h1>
+    <p>
+      A croissant is a French pastry made from puff pastry in a crescent
+      shape.[2] It is a buttery, flaky, viennoiserie pastry inspired by the
+      shape of the Austrian kipferl, but using the French yeast-leavened
+      laminated dough.[3] Croissants are named for their historical crescent
+      shape. The dough is layered with butter, rolled and folded several times
+      in succession, then rolled into a thin sheet, in a technique called
+      laminating. The process results in a layered, flaky texture, similar to a
+      puff pastry.
+    </p>
+    <a href="index.html">Homepage</a>
+    <a href="photo.html"> Photos </a>
+    <a href="contact.html">Contact</a>
+  </body>
 </html>
